# portman

./: Cargo.toml  portman-prd.docx
src/: cli.rs  lib.rs  main.rs
src/commands/: assign.rs  check.rs  export.rs  list.rs  mod.rs
src/domain/: entities.rs  errors.rs  mod.rs  ports.rs
src/infrastructure/: json_store.rs  mod.rs  socket.rs
tests/: command_tests.rs  domain_tests.rs  integration_tests.rs
tests/fixtures/: sample_registry.json
