[package]
name = "portman"
version = "0.1.0"
edition = "2021"
description = "Local port registry CLI — know your ports"
license = "MIT"
authors = ["Allan Smeyatsky"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
